--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,20 @@
     "manifest_version": 3,
     "name": "Study Timer",
     "description": "Pomodoro timer that logs visited tabs and screenshots for proof of studying",
-    "version": "1.0",
+    "version": "0.1.0-Pre Release",
     "permissions": ["tabs", "storage", "scripting", "activeTab"],
     "background": {
         "service_worker": "background.js"
+
     },
     "action": {
-        "default_popup": "popup.html",
-        "default_icon": "icon.png"
+        "default_popup": "popup.html"
     },
-    "host_permissions": ["<all_urls>"]
+    "host_permissions": ["<all_urls>"],
+    "icons": {
+        "16": "icons/icon16.png",
+        "32": "icons/icon32.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"  
+    }
 }
