--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "Study Timer",
     "description": "Pomodoro timer that logs visited tabs and screenshots for proof of studying",
-    "version": "0.1.0-Pre Release",
+    "version": "0.1.0",
     "permissions": ["tabs", "storage", "scripting", "activeTab"],
     "background": {
         "service_worker": "background.js"
